sumo/tests/traci/VariableRetrieval/Vehicle/errors/UnsupportedVariable/testclient.prog
simstep 5 1
getvariable 0xa4 0xff dummy
simstep 6 1
